<resources>
    <string name="app_name">Android Showreel</string>
    <string name="list_item_name" translatable="false">Name</string>
    <string name="list_item_description" translatable="false">Description</string>
    <string name="error_list_loading" translatable="false">Error occurred on loading list process.</string>
    <string name="error_not_implemented" translatable="false">Sorry! This feature is currently not implemented</string>
    <string name="checkbox_all_items" translatable="false">All items</string>
    <string name="checkbox_done_items" translatable="false">Done items</string>
    <string name="checkbox_todo_items" translatable="false">TODO items</string>
    <string name="button_explore" translatable="false">Explore</string>
    <string name="button_motors" translatable="false">Motors</string>
    <string name="button_classified" translatable="false">Classified</string>
    <string name="button_services" translatable="false">Services</string>
    <string name="button_properties" translatable="false">Properties</string>
    <string name="button_jobs" translatable="false">Jobs</string>
    <string name="constraint_item_name" translatable="false">Popular Trending</string>
    <string name="constraint_item_view" translatable="false">View all</string>
    <string name="constraint_value" translatable="false">Play Station</string>
    <string name="qr_feature_name" translatable="false">QR Code scanner</string>
    <string name="qr_code" translatable="false">QR CODE: %s</string>
    <string name="textview_was_born" translatable="false">%1$s was born in: %2$d</string>
    <string name="textview_seek_bar_changes" translatable="false">Last saved value of SeekBar: %1$d \n Times you saved the value: %2$d</string>
    <string name="value_not_set" translatable="false">There is no value in SharedPref</string>
    <string name="seek_bar_default_value" translatable="false">Default SeekBar value saved.</string>
    <string name="edittext_name">Your name</string>
    <string name="edittext_login">Your login</string>
    <string name="edittext_password">Your password</string>
    <string name="edittext_retype_password">Re-type password</string>
    <string name="button_register">Register</string>
    <string name="registered" translatable="false">Registered</string>
    <string name="databinding" translatable="false">Simple databinding</string>
    <string name="two_way_databinding" translatable="false">Two way databinding</string>
    <string name="binding_adapter" translatable="false">Custom setter with use of BindingAdapter</string>
    <string name="edittext_equation" translatable="false">How much is 2+2?</string>
    <string name="button_add" translatable="false">Add</string>
    <string name="button_remove" translatable="false">Remove</string>
    <string name="button_replace" translatable="false">Replace</string>
    <string name="button_add_bs" translatable="false">Add BS</string>
    <string name="button_pop_bs" translatable="false">Pop BS</string>
    <string name="button_replace_bs" translatable="false">Replace BS</string>
    <string name="button_show_dialog" translatable="false">Show dialog</string>
    <string name="edittext_your_number" translatable="false">Enter your number.</string>
    <string name="textview_simple_fragment" translatable="false">Simple fragment.</string>
    <string name="textview_first_fragment" translatable="false">This is Fragment.</string>
    <string name="textview_second_fragment" translatable="false">This is Fragment with use of DialogFragment.</string>
    <string name="textview_third_fragment" translatable="false">This is ListFragment.</string>
    <string name="textview_fragment_with_date" translatable="false">Fragment, %1$s</string>
    <string name="no_fragments" translatable="false">There are no fragments.</string>
    <string name="listview_item_position" translatable="false">Position: %1$s</string>
    <string-array name="Cars">
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bugatti</item>
        <item>Cadillac</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Dodge</item>
        <item>Fiat</item>
        <item>Ferrari</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lamborghini</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Maserati</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes Benz</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Porsche</item>
        <item>Rolls Royce</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>
    <string name="button_pass_parcelable_data" translatable="false">PARCELABLE</string>
    <string name="button_pass_serializable_data" translatable="false">SERIALIZABLE</string>
    <string name="radio_button_male" translatable="false">Male</string>
    <string name="radio_button_female" translatable="false">Female</string>
    <string name="edittext_age" translatable="false">Your age</string>
    <string name="textview_data_passed" translatable="false">%1$s, you are %2$d years old %3$s.</string>
    <string name="enter_email" translatable="false">Email</string>
    <string name="enter_password" translatable="false">Password</string>
    <string name="reenter_password" translatable="false">Re-enter Password</string>
    <string name="enter_nickname" translatable="false">Nickname</string>
    <string name="wrong_email" translatable="false">This is not real email address.</string>
    <string name="wrong_password" translatable="false">Passwords does not match.</string>
    <string name="put_email" translatable="false">Enter your email address.</string>
    <string name="put_password" translatable="false">Enter your password.</string>
    <string name="put_nickname" translatable="false">Enter your nickname.</string>
    <string name="button_snackbar" translatable="false">SNACK</string>
    <string name="tv_show_snackbar" translatable="false">Show basic snackbar.</string>
    <string name="tv_show_snackbar_dismiss" translatable="false">Show snackbar with dismiss option.</string>
    <string name="tv_show_snackbar_action" translatable="false">Show snackbar with action option.</string>
    <string name="snackbar_simple" translatable="false">Simple snackbar</string>
    <string name="snackbar_change_background" translatable="false">Background color changed.</string>
    <string name="snackbar_dismiss" translatable="false">You clicked second button.</string>
    <string name="span_string_type_one" translatable="false">Bold, red, bold-o-red</string>
    <string name="span_string_type_two" translatable="false">Check out this website</string>
    <string name="span_string_type_three" translatable="false">TODO list:\neat \nsleep</string>
    <string name="span_string_type_four" translatable="false">Look at my android</string>
    <string name="simple_dialog_button" translatable="false">Simple dialog</string>
    <string name="list_dialog_button" translatable="false">Dialog with list</string>
    <string name="multiple_list_dialog_button" translatable="false">Dialog with multi-choice list</string>
    <string name="custom_dialog_button" translatable="false">Custom dialog</string>
    <string name="edittext_dialog_button" translatable="false">Dialog with EditText</string>
    <string name="alert_give_money_title" translatable="false">Give money?</string>
    <string name="alert_give_money_message" translatable="false">We are poor company. We want your help</string>
    <string name="alert_list_item" translatable="false">Choose your favourite car brand.</string>
    <string name="alert_multiple_list_item" translatable="false">Describe yourself.</string>
    <string name="alert_edittext" translatable="false">Type your nickname.</string>
    <string name="dialog_textview" translatable="false">This is custom dialog.\nThis is custom dialog.\nThis is custom dialog.</string>
    <string name="fragment_first_nav" translatable="false">Frag1</string>
    <string name="fragment_second_nav" translatable="false">Frag2</string>
    <string name="fragment_third_nav" translatable="false">Frag3</string>
    <string name="persistent_bottom_sheet" translatable="false">Persistent bottom sheet</string>
    <string name="modal_bottom_sheet" translatable="false">Modal bottom sheet</string>
    <string name="bottom_sheet_persistent_tv1" translatable="false">This is persistent Bottom Sheet</string>
    <string name="bottom_sheet_persistent_tv2" translatable="false">Welcome to Android Showreel</string>
    <string name="bottom_sheet_persistent_tv3" translatable="false">Join our community</string>
    <string name="bottom_sheet_persistent_button" translatable="false">Join us</string>
    <string name="bottom_sheet_modal_tv1" translatable="false">This is modal Bottom Sheet</string>
    <string name="bottom_sheet_modal_tv2" translatable="false">Welcome to Android Showreel</string>
    <string name="bottom_sheet_modal_tv3" translatable="false">Join our community</string>
    <string name="bottom_sheet_modal_button" translatable="false">Join us</string>
    <string name="autocomplete_description_tv" translatable="false">TextView with autocomplete:</string>
    <string name="choose_country_tv" translatable="false">Choose your country</string>
    <string name="username_tv" translatable="false">Username</string>
    <string name="password_tv" translatable="false">Password</string>
    <string name="login_button" translatable="false">Login</string>
    <string name="no_account" translatable="false">No account yet?\nCreate one.</string>
    <string name="scale_up_button" translatable="false">Scale up</string>
    <string name="scale_down_button" translatable="false">Scale down</string>
    <string name="invert_colors_button" translatable="false">Invert colors</string>
    <string name="make_grayscale_button" translatable="false">Make colorless</string>
    <string name="reset_button" translatable="false">Reset</string>
    <string name="button_change_language">Change language</string>
    <string name="hello_tv">Hello!</string>
    <string name="button_simple_notification" translatable="false">Show simple notification</string>
    <string name="button_custom_notification" translatable="false">Show custom notification</string>
    <string name="button_action_notification" translatable="false">Show action notification</string>
    <string name="button_request_permissions" translatable="false">Start activity</string>
    <string name="button_bounce" translatable="false">Bounce</string>
    <string name="button_rotate" translatable="false">Rotate</string>
    <string name="button_fade_in" translatable="false">Fade in</string>
    <string name="button_fade_out" translatable="false">Fade out</string>
    <string name="button_zoom_in" translatable="false">Zoom in</string>
    <string name="button_zoom_out" translatable="false">Zoom out</string>
    <string name="button_slide_down" translatable="false">Slide down</string>
    <string name="button_slide_up" translatable="false">Slide up</string>
    <string name="gesture_action_down" translatable="false">Action down</string>
    <string name="gesture_action_up" translatable="false">Action up</string>
    <string name="gesture_action_cancel" translatable="false">Action cancel</string>
    <string name="gesture_action_move" translatable="false">Action move</string>
    <string name="gesture_action_outside" translatable="false">Action outside</string>
    <string name="start_service" translatable="false">Start service</string>
    <string name="stop_service" translatable="false">Stop service</string>
</resources>