<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/m_textview"
        style="@style/ShowreelLabel.Long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fade_in"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="fadeInAnimation"
        android:text="@string/button_fade_in"
        app:layout_constraintBottom_toTopOf="@id/slide_down"
        app:layout_constraintEnd_toStartOf="@id/fade_out"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fade_out"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="fadeOutAnimation"
        android:text="@string/button_fade_out"
        app:layout_constraintBottom_toTopOf="@id/slide_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fade_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/slide_up"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="slideUpAnimation"
        android:text="@string/button_slide_up"
        app:layout_constraintBottom_toTopOf="@id/zoom_in"
        app:layout_constraintEnd_toStartOf="@id/slide_down"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/slide_down"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="slideDownAnimation"
        android:text="@string/button_slide_down"
        app:layout_constraintBottom_toTopOf="@id/zoom_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/slide_up" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zoom_in"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="zoomInAnimation"
        android:text="@string/button_zoom_in"
        app:layout_constraintBottom_toTopOf="@id/rotate"
        app:layout_constraintEnd_toStartOf="@id/zoom_out"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zoom_out"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="zoomOutAnimation"
        android:text="@string/button_zoom_out"
        app:layout_constraintBottom_toTopOf="@id/rotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/zoom_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rotate"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="rotateAnimation"
        android:text="@string/button_rotate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bounce"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bounce"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing5"
        android:onClick="bounceAnimation"
        android:text="@string/button_bounce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rotate" />

</androidx.constraintlayout.widget.ConstraintLayout>