<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_name"
        app:layout_constraintBottom_toTopOf="@id/et_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_top" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_age"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/gender_radio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <RadioGroup
        android:id="@+id/gender_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_pass_parcelable_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_age">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_male" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_female" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_pass_parcelable_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pass_parcelable_data"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_bot"
        app:layout_constraintEnd_toStartOf="@id/button_pass_serializable_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_radio" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_pass_serializable_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pass_serializable_data"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_pass_parcelable_data"
        app:layout_constraintTop_toBottomOf="@id/gender_radio" />

</androidx.constraintlayout.widget.ConstraintLayout>